# controllers/Account.js
@@ -4,6 +4,7 @@ const Db = require('../db/googleCloudDB');
 
 // Get all accounts
 const getAccounts = (req, res, next) => {
+    console.log('getting all accounts');
     Db.knex().select('*')
         .from('accounts')
         .then((results) => {
@@ -16,15 +17,42 @@ const getAccounts = (req, res, next) => {
 
 // Create an account
 const createAccount = (req, res, next) => {
+    console.log('creating account');
     const account = {
         username: req.body.username,
         email: req.body.email,
         password: req.body.password
     }
-    console.log('got to create account');
+    Db.knex()('accounts')
+        .insert(account)
+        .then((results) => res.status(201).send('account created'))
+        .catch((err) => {
+            next(err);
+        });
+}
 
-    Db.knex()('accounts').insert(account)
-        .then(res.status(200).send('account created'))
+// Update an account
+const updateAccount = (req, res, next) => {
+    console.log(`updating account ${req.params.accountId}`);
+    Db.knex()('accounts')
+        .where({id: req.params.accountId})
+        .update(req.body)
+        .then((result) => {
+            res.status(200).send('account updated');
+        })
+        .catch((err) => {
+            next(err);
+        });
+}
+
+
+// Delete an account
+const deleteAccount = (req, res, next) => {
+    console.log(`deleting account ${req.params.accountId}`);
+    Db.knex()('accounts')
+        .where({id: req.params.accountId})
+        .del()
+        .then((result) => res.status(204).send('account deleted'))
         .catch((err) => {
             next(err);
         });
@@ -33,4 +61,6 @@ const createAccount = (req, res, next) => {
 module.exports = {
     getAccounts,
     createAccount,
+    updateAccount,
+    deleteAccount,
 };
